--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.10.3",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.6",
     "ts-node-dev": "^1.1.1",
     "tslint": "^5.12.1",
